classDiagram

class User {
    id : UUID
    first_name : String
    last_name : String
    email : String
    password : String
    is_admin : Boolean
    created_at : DateTime
    updated_at : DateTime

    +create()
    +update()
    +delete()
}

class Place {
    id : UUID
    title : String
    description : String
    price : Float
    latitude : Float
    longitude : Float
    created_at : DateTime
    updated_at : DateTime

    +create()
    +update()
    +delete()
}

class Review {
    id : UUID
    rating : Integer
    comment : String
    created_at : DateTime
    updated_at : DateTime

    +create()
    +update()
    +delete()
}

class Amenity {
    id : UUID
    name : String
    description : String
    created_at : DateTime
    updated_at : DateTime

    +create()
    +update()
    +delete()
}

class BusinessFacade {
    +createUser()
    +createPlace()
    +createReview()
    +createAmenity()
}

User "1" --> "*" Place : owns
User "1" --> "*" Review : writes
Place "1" --> "*" Review : receives
Place "*" --> "*" Amenity : has
BusinessFacade --> User
BusinessFacade --> Place
BusinessFacade --> Review
BusinessFacade --> Amenity
